--- a/ascii.html
+++ b/ascii.html
@@ -8,26 +8,49 @@
 <body>
 	<h1> CSCI 342 ASCII Animation Viewer </h1>
 	
-	<form action="ascii.html">
-		<textarea name="viewer" rows="20" cols="80">
-		</textarea>
-	</form>
+	<textarea name="viewer" rows="20" cols="80"></textarea>
 	
-	<div class="controls">
-		<p> Play Controls: </p>
+	<div id="controlscontainer">
+	<div id="controls">
+
+	<fieldset> 
+		<legend>Controls:</legend>
+		<button type="button" onclick="startFunc()">Start</button>
+		<button type="button" onclick="stopFunc()">Stop</button>
+	</fieldset>
+	
+	<fieldset> 
+		<legend>Animations:</legend>
+		<select onchange="changeAnimation(this.value)">
+			<option selected value="">Blank</option>
+			<option value="exercise.js">Exercise</option>
+			<option value="juggler.js">Juggler</option>
+			<option value="bike.js">Bike</option>
+			<option value="dive.js">Dive</option>
+			<option value="custom.js">Custom</option>
+		</select>
+	</fieldset>
+	
+	<fieldset> 
+		<legend>Size:</legend>
+		<select onchange="changeFontSize(this.value)">
+			<option value="7">Tiny</option>
+			<option value="10">Small</option>
+			<option selected value="12">Medium</option>
+			<option value="16">Large</option>
+			<option value="24">Extra Large</option>
+			<option value="32">XXL</option>
+		</select>
+	</fieldset>
+	
+	<fieldset> 
+		<legend>Speed:</legend>
+		<input type="checkbox" onchange="speedChange()" value="Turbo">Turbo
+	</fieldset>
+	
+	</div>
 	</div>
 	
-	<div class="controls">
-		<p> Animation: </p>
-	</div>
-	
-	<div class="controls">
-		<p> Size: </p>
-	</div>
-	
-	<div class="controls">
-		<p> Speed: </p>
-	</div>
 	
 </body>
 </html>
