Pass font pt to js function upon clicking the change font control

--- a/ascii.html
+++ b/ascii.html
@@ -35,12 +35,12 @@
 	<fieldset> 
 		<legend>Size:</legend>
 		<select onchange="changeFontSize(this.value)">
-			<option value="7">Tiny</option>
-			<option value="10">Small</option>
-			<option selected value="12">Medium</option>
-			<option value="16">Large</option>
-			<option value="24">Extra Large</option>
-			<option value="32">XXL</option>
+			<option value="7pt">Tiny</option>
+			<option value="10pt">Small</option>
+			<option selected value="12pt">Medium</option>
+			<option value="16pt">Large</option>
+			<option value="24pt">Extra Large</option>
+			<option value="32pt">XXL</option>
 		</select>
 	</fieldset>
 	
