--- a/ascii.html
+++ b/ascii.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="ascii.css">
 	<script type="text/javascript" src="ascii.js"></script>
 	<script type="text/javascript" src="animations.js"></script>
+	<script type="text/javascript" src="myanimation.js"></script>
 </head>
 <body>
 	<h1> CSCI 342 ASCII Animation Viewer </h1>
@@ -28,7 +29,7 @@
 			<option value="Juggler">Juggler</option>
 			<option value="Bike">Bike</option>
 			<option value="Dive">Dive</option>
-			<option value="custom.js">Custom</option>
+			<option value="Custom">Custom</option>
 		</select>
 	</fieldset>
 	
