Add comments to files

--- a/ascii.html
+++ b/ascii.html
@@ -1,3 +1,15 @@
+<!--
+ * Elise Saxon
+ * CS342: Web Scripting, WWU
+ * Due Nov. 17, 2017
+ * 
+ * ASCIImation website: A site formatted based on Homework #4 specifications.
+ * Practice with javascript concepts.
+ * This HTML file creates all the elements visible on the site, which include
+ * the title, textarea, and controls.
+-->
+
+
 <!DOCTYPE html>
 <html>
 <head>
